scss/_layout.scss
*,
::after,
::before {
    box-sizing: border-box;
}

img {
    vertical-align: middle;
    border-style: none
}

article,
aside,
dialog,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section {
    display: block;
}

/*containers and page layout-ers*/

.container {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    max-width: 720px
        /*? about that last one*/
}

.row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px
}

.col {
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%
}

/*in handlebars files: community, communities, communitysidebar, settings, and support*/
.pane {
    padding: 15px;
    background: $element-background;
    border: 1px solid $medium-grey;
}

.justify-content-center {
    -webkit-box-pack: center !important;
    -ms-flex-pack: center !important;
    justify-content: center !important
}

/* todo: move to somewhere that makes sense */
.inactive-feed-container{
    display:none;
}

@media(min-width:600px) {
    .col-md-4 {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 33.333333%;
        flex: 0 0 33.333333%;
        max-width: 33.333333%
    }

    .col-md-8 {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 66.666667%;
        flex: 0 0 66.666667%;
        max-width: 66.666667%
    }
}

.col-6 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    position: relative;
    padding-right: 15px;
    padding-left: 15px;
}

@media (min-width: 992px) {
    .col-lg-8 {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 66.666667%;
        flex: 0 0 66.666667%;
        max-width: 66.666667%;
    }
}

.col,
.col-1,
.col-10,
.col-11,
.col-12,
.col-2,
.col-3,
.col-4,
.col-5,
.col-6,
.col-7,
.col-8,
.col-9,
.col-auto,
.col-lg,
.col-lg-1,
.col-lg-10,
.col-lg-11,
.col-lg-12,
.col-lg-2,
.col-lg-3,
.col-lg-4,
.col-lg-5,
.col-lg-6,
.col-lg-7,
.col-lg-8,
.col-lg-9,
.col-lg-auto,
.col-md,
.col-md-1,
.col-md-10,
.col-md-11,
.col-md-12,
.col-md-2,
.col-md-3,
.col-md-4,
.col-md-5,
.col-md-6,
.col-md-7,
.col-md-8,
.col-md-9,
.col-md-auto,
.col-sm,
.col-sm-1,
.col-sm-10,
.col-sm-11,
.col-sm-12,
.col-sm-2,
.col-sm-3,
.col-sm-4,
.col-sm-5,
.col-sm-6,
.col-sm-7,
.col-sm-8,
.col-sm-9,
.col-sm-auto,
.col-xl,
.col-xl-1,
.col-xl-10,
.col-xl-11,
.col-xl-12,
.col-xl-2,
.col-xl-3,
.col-xl-4,
.col-xl-5,
.col-xl-6,
.col-xl-7,
.col-xl-8,
.col-xl-9,
.col-xl-auto {
    position: relative;
    width: 100%;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 15px;
}

@media (min-width: 992px) {
    .col-lg-7 {
        -ms-flex: 0 0 58.333333%;
        flex: 0 0 58.333333%;
        max-width: 58.333333%;
    }
}

@media (min-width: 768px) {
    .col-md-7 {
        -ms-flex: 0 0 58.333333%;
        flex: 0 0 58.333333%;
        max-width: 58.333333%;
    }
}

/* This is such a hot mess of a hack, I'm sorry */
.col-md-4 h4,
.col-md-4 h5,
.col-md-4 h6 {
    font-family: 'Ubuntu', sans-serif;
}

.flex-column {
    -webkit-box-orient: vertical !important;
    -webkit-box-direction: normal !important;
    -ms-flex-direction: column !important;
    flex-direction: column !important
}

.mt-2,
.my-2 {
    margin-top: .5rem !important
}

.d-block {
    display: block !important;
}

.mt-3,
.my-3 {
    margin-top: 1rem !important;
}

.mr-2,
.mx-2 {
    margin-right: .5rem !important
}

.pt-0,
.py-0 {
    padding-top: 0 !important
}

.p-2 {
    padding: .5rem !important;
}

.pl-0,
.px-0 {
    padding-left: 0 !important;
}

.pb-0,
.py-0 {
    padding-bottom: 0 !important
}

.p-1 {
    padding: .25rem !important
}

.mr-1,
.mx-1 {
    margin-right: .25rem !important
}

.mb-3,
.my-3 {
    margin-bottom: 1rem !important;
}

.mb-4,
.my-4 {
    margin-bottom: 1.5rem !important
}

@media(min-width:600px) {

    .mr-md-0,
    .mx-md-0 {
        margin-right: 0 !important
    }
}

.ml-md-0,
.mx-md-0 {
    margin-left: 0 !important
}

.mt-0,
.my-0 {
    margin-top: 0 !important
}

@media(max-width:600px) {

    .mb-2,
    .my-2 {
        margin-bottom: .5rem !important
    }

    .ml-2,
    .mx-2 {
        margin-left: .5rem !important
    }
}

/*old posts container, deprecated in postsV2.handlebars, still used by systempost and the hidden newPostsAvailable thing*/
/*not to be confused with comments-container, which actually contains comments*/
.commentContainer {
    padding: 15px;
    border-bottom: 1px solid $medium-grey;
    padding-bottom: 0px;
}

.community-container {
    display: none;
}

#mainBody {
    display: block;
}

#homeBody,
#userBody,
#pageContainer {
    justify-content: center;
}

#bodyContainer {
    padding-top: 80px;
    padding-bottom: 20px;
}

#bodyContainer .intro {
    text-align: center;
}

@media screen and (max-width: 768px) {
    #bodyContainer {
        width: 100%;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 70px;
    }
}

@media (max-width: 768px) {

    #homeBody,
    #userBody {
        margin: 0;
    }

    #homeBody>div,
    #userBody>div {
        padding: 0;
    }
}

.page-header {
    border-bottom: 2px solid $dark-pink;
    padding-bottom: 10px;
    margin-bottom: 20px;
}


@media (min-width: 576px) {
    .container {
        max-width: 540px;
    }
}

@media (min-width: 768px) {
    .container {
        max-width: 720px;
    }
}

@media (min-width: 992px) {
    .container {
        max-width: 960px;
    }
}

@media (min-width: 1200px) {
    .container {
        max-width: 1140px;
    }
}

@media screen and (max-width: 768px) {
    #bodyContainer {
        width: 100%;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 70px;
    }
}

/* suggested users and hashtags stuff */

.fixed-container {
    position: fixed;
}

@media(max-width:600px){
    .fixed-container {
        display:none;
    }
}
/* ... */

